<resources>
    <string name="app_name">Sirius</string>
    <string name="game_name">DoTA 2</string>
    <string name="game_moba">MOBA</string>
    <string name="game_multiplayer">MULTIPLAYER</string>
    <string name="game_strategy">STRATEGY</string>
    <string name="reviews_70m">70M reviews</string>
    <string name="review_and_rating">Review &amp; Ratings</string>
    <string name="name_auguste">Auguste Conte</string>
    <string name="date_auguste_jang">February 14, 2019</string>
    <string name="name_jang">Jang Marcelino</string>
    <string name="install">Install</string>
    <string name="people_review">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="app_discription">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
</resources>